--- a/package.json
+++ b/package.json
@@ -12,21 +12,25 @@
     "prisma:push": "prisma db push",
     "prisma:studio": "prisma studio"
   },
-  "keywords": ["lecture", "transcription", "notes", "education"],
+  "keywords": [
+    "lecture",
+    "transcription",
+    "notes",
+    "education"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@fastify/multipart": "^8.0.0",
-    "@prisma/client": "^5.19.0",
+    "@prisma/client": "^5.22.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.12",
-    "prisma": "^5.19.0",
+    "prisma": "^5.22.0",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4"
   }
 }
-
