--- a/package.json
+++ b/package.json
@@ -7,26 +7,33 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
+    "smoke": "bash scripts/smoke_test.sh",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:push": "prisma db push",
     "prisma:studio": "prisma studio"
   },
-  "keywords": ["lecture", "transcription", "notes", "education"],
+  "keywords": [
+    "lecture",
+    "transcription",
+    "notes",
+    "education"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@fastify/multipart": "^8.0.0",
-    "@prisma/client": "^5.19.0",
+    "@fastify/swagger": "^8.13.0",
+    "@fastify/swagger-ui": "^2.0.0",
+    "@prisma/client": "^5.22.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.12",
-    "prisma": "^5.19.0",
+    "prisma": "^5.22.0",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4"
   }
 }
-
