--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fastify/multipart": "^8.0.0",
     "@fastify/swagger": "^8.13.0",
     "@fastify/swagger-ui": "^2.0.0",
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^5.22.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
